# aMeta

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: main.v8.yaml  main.yaml  mainv8.yaml
.test/: conftest.py  noxfile.py  pytest.ini  runtest.sh  tests.py
.test/config/: config.bowtie.yaml  config.yaml
.test/resources/: pathogenomesFound.tab  samples.tsv
.test/resources/KrakenUniq_DB/taxonomy/: names.dmp  nodes.dmp
config/: config.yaml  envmodules.yaml
misc/: condalock.sh  condalock.v7.sh  condalock.v8.smk
profile/: config.yaml
src/amibo/: __main__.py  cli.py  templates.py  utils.py
src/amibo/.test/config/: config.yaml
src/amibo/cli/: __init__.py  cli.py  run.py  test.py
src/amibo/config/: config.yaml  envmodules.yaml  samples.tsv
src/amibo/templates/: amibo.yaml.j2
src/amibo/workflow/: Snakefile
src/amibo/workflow/envs/: malt.yaml  (+5 more)
tests/: conftest.py
vignettes/: aMeta.html  aMeta.qmd
workflow/: Snakefile
workflow/envs/: bowtie2.yaml  cutadapt.yaml  environment.v8.yaml  environment.yaml  environment.yml  environmentv8.yaml  fastqc.yaml  krakenuniq.yaml  krona.yaml  malt.yaml  mapdamage.yaml  multiqc.yaml  r.yaml  samtools.yaml
workflow/report/: workflow.rst
workflow/rules/: align.smk  authentic.smk  common.smk  config.py  damage.smk  krakenuniq.smk  malt.smk  ncbitremapv7.smk  ncbitremapv8.smk  qc.smk  summary.smk
workflow/schemas/: config.schema.yaml  samples.schema.yaml
workflow/scripts/: authentic.R  authentic.sh  filter_krakenuniq.R  filter_krakenuniq.py  krakenuniq2krona.R  krakenuniq2krona.py  krakenuniq_abundance_matrix.R  malt-build.py  malt_abundance_matrix.R  malt_quantify_abundance.py  plotPMD.v2.R  plot_krakenuniq_abundance_matrix.R  plot_score.R  pmdtools.0.60.py  rma-tabuliser  score.R
(+14 files in other folders)
